--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "description": "Overleaf/Latex: https://da.overleaf.com/4497578287twjssgtfpmwn",
   "main": "Code.js",
-  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
     "devStart": "nodemon server.js"
   },
   "repository": {
