--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Overleaf/Latex: https://da.overleaf.com/4497578287twjssgtfpmwn",
   "main": "Code.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "devStart": "nodemon server.js"
@@ -19,10 +20,10 @@
   },
   "homepage": "https://github.com/Rakibei/P2-Project-cs-23-sw-2-04#readme",
   "dependencies": {
-    "express": "^4.18.2",
-    "express-session": "^1.17.3",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mysql2": "^3.1.2"
   },
   "devDependencies": {
