--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-session": "^1.17.3",
     "mysql2": "^3.1.2",
     "nodemailer": "^6.9.1",
+    "nodmeon": "^0.0.1-security",
     "pdfkit": "^0.13.0",
     "xlsx": "^0.18.5"
   },
