--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/Rakibei/P2-Project-cs-23-sw-2-04#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "cron": "^2.2.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
