--- a/.env
+++ b/.env
@@ -1,5 +1,10 @@
-MYSQL_HOST     = "localhost"
-MYSQL_DATABASE = "cs_23_sw_2_04"
-MYSQL_USER     = "cs-23-sw-2-04@student.aau.dk"
-MYSQL_PASSWORD = "X6T3EhN8M7F9jaAZ"
+
+# Database on server
+# MYSQL_HOST     = "localhost"
+# MYSQL_DATABASE = "cs_23_sw_2_04"
+# MYSQL_USER     = "cs-23-sw-2-04@student.aau.dk"
+# MYSQL_PASSWORD = "X6T3EhN8M7F9jaAZ"
+
+
+# Local Database
 
