--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "moment": "^2.29.4",
+    "mysql": "^2.18.1",
     "mysql2": "^3.1.2",
     "nodemailer": "^6.9.1",
     "nodmeon": "^0.0.1-security",
