Route til projectmanager tilføjet

--- a/.env
+++ b/.env
@@ -11,6 +11,6 @@
 MYSQL_HOST     = "localhost"
 MYSQL_DATABASE = "cs_23_sw_2_04"
 MYSQL_USER     = "root"
-MYSQL_PASSWORD = "awkt1998kwa"
+MYSQL_PASSWORD = "Drq87xtr"
 
 
