--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MYSQL_HOST="sql7.freemysqlhosting.net"
-MYSQL_USER="sql7601935"
-MYSQL_PASSWORD="cV5xlXjEdR"
-MYSQL_DATABASE="sql7601935"
+MYSQL_HOST     = "localhost"
+MYSQL_DATABASE = "cs_23_sw_2_04"
+MYSQL_USER     = "root"
+MYSQL_PASSWORD = "&8SYv2H^B#6&HjQr5N3f"
