--- a/package.json
+++ b/package.json
@@ -21,13 +21,20 @@
   "homepage": "https://github.com/Rakibei/P2-Project-cs-23-sw-2-04#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "cron": "^2.2.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "moment": "^2.29.4",
+    "mysql": "^2.18.1",
     "mysql2": "^3.1.2",
+    "node-cron": "^3.0.2",
+    "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.1",
-    "pdfkit": "^0.13.0"
+    "nodmeon": "^0.0.1-security",
+    "pdfkit": "^0.13.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
