--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bcryptjs": "^2.4.3",
     "cron": "^2.2.0",
     "dotenv": "^16.0.3",
+    "env": "^0.0.2",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "moment": "^2.29.4",
